--- a/resources/style.css
+++ b/resources/style.css
@@ -5,8 +5,7 @@ html {
 	padding: 0;
 	font-size: 16px;
 }
-	
-}
+
 
 /* Header Section */
 
@@ -50,17 +49,48 @@ html {
 }
 
 /* Banner Section */
+.banner {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: rgb(192, 208, 224);
+}
 
 .banner img {
 	width: 60%;
+	margin: 32px 0px 32px 24px;
+}
+
+.banner-content {
+	
+	padding-left: 40px;
+}
+
+.banner-content h2 {
+	font-size: 2.25rem;
+	font-weight: bold;
+	margin-bottom: 25px;
+}
+
+.banner-content p {
+	font-size: 1.15rem;
+	margin-bottom: 25px;
+	line-height: 1.5rem;
+}
+
+.banner-content h4 {
+	font-size: 0.9rem;
+	padding-top: 8px;
+	padding-bottom: 8px;
+}
+
+.button {
+	background-color: grey;
+	text-align: center;
+
 }
 
 
 
 
-
-
-
-
-
-
+}
