--- a/resources/style.css
+++ b/resources/style.css
@@ -167,24 +167,44 @@ html {
 
 .courses {
 	background-color: blue;
-	
+	padding-bottom: 32px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+
+
 }
 
 .courses h3 {
-	text-align: center;
+	
 	padding: 32px 0;
 }
 
 .course-container {
 	background-color: green;
-
+	width: 85%;
+	
 }
 
 .row {
 	display: flex;
-
 }
 
 .course-box {
 
 }
+
+.box-top {
+	height: 220px;
+}
+
+#box-middle {
+	margin: 0 16px;
+}
+
+.course-box img {
+  width: 100%;
+  
+}
+	
