--- a/resources/style.css
+++ b/resources/style.css
@@ -6,6 +6,41 @@ html {
 	font-size: 16px;
 }
 
+h2 {
+	color: rgb(61, 61, 61);
+	font-size: 2.25rem;
+	font-weight: bold;
+	margin-bottom: 25px;
+}
+
+h3 { 
+	font-size: 1.85rem;
+	font-weight: 700;
+	color: rgb(61, 61, 61);
+	padding: 32px 0;
+}
+
+h4 {
+	font-size: 1.20rem;
+	font-weight: 500;
+	color: rgb(61, 61, 61);
+}
+
+p {
+	font-size: 0.90rem;
+	font-weight: 300;
+	line-height: 150%;
+	color: rgb(61, 61, 61);
+}
+
+h6, a {
+	font-size: 0.85rem;
+	color: rgb(77, 79, 79);
+}
+
+
+
+
 /* Header Section */
 
 .header {
@@ -45,6 +80,8 @@ html {
 .menu a {
 	text-decoration: none;
 	color: rgb(75, 79, 79);
+	font-size: 1rem;
+	font-weight: 400;
 }
 
 .menu a:hover {
@@ -68,22 +105,8 @@ html {
 	padding-left: 40px;
 }
 
-.banner-content h2 {
-	font-size: 2.25rem;
-	font-weight: bold;
-	margin-bottom: 25px;
-}
-
-.banner-content p {
-	font-size: 1.15rem;
-	margin-bottom: 30px;
-	line-height: 1.5rem;
-}
-
 .banner-content h4 {
-	font-size: 0.9rem;
-	padding-top: 8px;
-	padding-bottom: 8px;
+	margin-bottom: 2rem;
 }
 
 .banner a {
@@ -92,8 +115,8 @@ html {
     text-align: center;
     color: white;
     text-decoration: none;
-    font-size: 0.9rem;
-    font-weight: 300;
+    font-size: 1rem;
+    font-weight: 400;
     border-radius: 5px; 
     color: black;
 }
@@ -112,7 +135,6 @@ html {
 }
 
 .main-article {
-	background-color: pink;
 	width: 60%;
 	margin: 32px 24px;
 }
@@ -121,22 +143,13 @@ html {
 	width: 100%;	
 }
 
-.article h3 {
-	padding: 32px 0;
-}
-
 .article h6 {
 	padding-top: 32px;
 }
 
 .sub-article {
 	width: 423px;
-	background-color: yellow;
 	margin-top: 16px;
-}
-
-.sub-article h5 {
-	margin: 8px 0;
 }
 
 .sub-article a {
@@ -154,53 +167,51 @@ html {
 	margin: 16px;
 }
 
-#title-md {
-	font-size: 1.85rem;
-	font-weight: 700;
-}
-
 .info-box:last-child {
-	background-color: grey;
+	background-color: rgb(245, 243, 200);
 }
 
+#info {
+	margin: 8px 0;
+}
 /* Course section */
 
 .courses {
-	background-color: blue;
 	padding-bottom: 32px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	flex-direction: column;
-}
-
-.courses h3 {
-	padding: 32px 0;
+	flex-direction: column;	
+	background-color: rgb(225, 244, 244);
 }
 
 .course-container {
-	background-color: green;
 	width: 85%;
 }
 
-.row {
+.row-one, 
+.row-two {
 	display: flex;
 }
 
+.row-one {
+	margin-bottom: 16px;
+}
+
 .course-box {
-	width: 80%;
+	width: 33%;
+	background-color: white;
+	border: solid grey thin;
+	border-radius: 5px;
 }
 
-.box-top {
-	height: 220px;
-
+.course-box img {
+  width: 100%;
 }
 
-.box-top p, 
-.box-bottom {
-	margin-left: 16px;
+.description {
+	margin: 16px 16px 24px 16px;	
 }
-
 
 #box-middle {
 	margin: 0 32px;
@@ -208,12 +219,69 @@ html {
 
 #courses {
 	margin: 8px 0;
-	margin-left: 16px;
 }
 
-.course-box img {
-  width: 100%;
-  margin-bottom: 16px;
-  
+/* Exhibit starts here */
+
+.exhibit {
+	background-color: ;
+	display: flex;
+	align-items: center;
+	flex-direction: column;
 }
-	
+
+.exhibit h4 {
+	padding-bottom: 24px;
+}
+
+.exhibit-container {
+	display: flex;
+}
+
+.main-exhibit {
+	padding: 0 16px 32px 24px;
+}
+
+.exhibit-content {
+	margin-top: 24px;
+}
+
+.exhibit-box:first-child {
+	background-color: rgb(224, 232, 232);
+}
+
+video {
+	width: 100%;
+}
+
+.exhibit-box {
+	width: 423px;
+	height: 168px;
+	display: flex;
+	align-items: center;
+}
+
+.exhibit-box img {
+	width: 35%;
+	padding: 16px;
+}
+
+/* Footer starts here */
+ .footer {
+ 	display: flex;
+ 	justify-content: space-between;
+ 	padding: 32px 24px;
+ 	border-top: solid grey thin;
+ }
+
+
+.legal {
+	display: flex;
+}
+
+.legal h6 {
+	margin-right: 20px;
+}
+
+
+
