--- a/resources/style.css
+++ b/resources/style.css
@@ -94,15 +94,15 @@ h6, a {
 	align-items: center;
 	justify-content: center;
 	background-color: rgb(198, 233, 225);
+	padding: 32px 24px;
 }
 
 .banner img {
 	width: 60%;
-	margin: 32px 0px 32px 24px;
 }
 
 .banner-content {
-	padding-left: 40px;
+	margin-left: 40px;
 }
 
 .banner-content h4 {
@@ -130,13 +130,18 @@ h6, a {
 
 .article {
 	display: flex;
-	justify-content: space-between;
-
+	flex-direction: row;
+	align-items: center;
 }
+
+.article-container {
+	display: flex;
+}
+
 
 .main-article {
 	width: 60%;
-	margin: 32px 24px;
+	padding: 32px 24px;
 }
 
 .main-article img {
@@ -149,6 +154,7 @@ h6, a {
 
 .sub-article {
 	width: 423px;
+	margin-left: 24px;
 	margin-top: 16px;
 }
 
@@ -201,7 +207,7 @@ h6, a {
 .course-box {
 	width: 33%;
 	background-color: white;
-	border: solid grey thin;
+	border: solid grey thi;
 	border-radius: 5px;
 }
 
@@ -224,7 +230,7 @@ h6, a {
 /* Exhibit starts here */
 
 .exhibit {
-	background-color: ;
+	
 	display: flex;
 	align-items: center;
 	flex-direction: column;
@@ -240,6 +246,7 @@ h6, a {
 
 .main-exhibit {
 	padding: 0 16px 32px 24px;
+	width: 60%;
 }
 
 .exhibit-content {
